--- a/Prediction1/app/src/main/res/values/strings.xml
+++ b/Prediction1/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="ui_collector_radio_walking_title">Walking</string>
     <string name="ui_collector_radio_running_title">Running</string>
     <string name="ui_collector_radio_other_title">Others</string>
-    <string name="ui_collector_button_start_title">Start collecting</string>
+    <string name="ui_collector_button_start_title">Start recognizing</string>
     <string name="ui_collector_button_stop_title">Stop collecting</string>
-    <string name="ui_collector_button_delete_title">Delete Data</string>
+    <string name="ui_collector_button_delete_title">Delete recognizing</string>
     <string name="ui_collector_toast_file_deleted">All files deleted.</string>
     <string name="ui_sensor_service_notification_ticker">Collector started recording.</string>
     <string name="ui_sensor_service_notification_title">MyRuns Collector</string>
@@ -17,6 +17,7 @@
     <string name="ui_sensor_service_toast_success_file_created">Data file created.</string>
     <string name="ui_sensor_service_toast_error_file_saving_failed">Failed saving the file. Check your storage.</string>
     <string name="ui_collector_button_recognize_title">recognize</string>
+    <string name="ui_collector_button_clear_title">clear</string>
 
 
 </resources>
