--- a/Thesis/_termreport_EN.tex
+++ b/Thesis/_termreport_EN.tex
@@ -2,10 +2,17 @@
 %% with the standard LaTeX 'report' class
 %% äöüÄÖÜß  <-- keine deutschen Umlaute hier? UTF-faehigen Editor verwenden!
 
+%%% Magic comments for setting the correct parameters in compatible IDEs
+% !TeX encoding = utf8
+% !TeX program = pdflatex 
+% !TeX spellcheck = en_US
+% !BIB program = biber
+
 \documentclass[a4paper,english,11pt]{report}		
 %\documentclass[a4paper,ngerman,11pt]{report}
 
 \usepackage{hgb}
+\usepackage{hgbmath}
 \usepackage{hgbabbrev}
 \usepackage{hgblistings}
 \usepackage{hgbbib}
@@ -16,28 +23,85 @@
 \graphicspath{{images/}}  % where are the images?
 \bibliography{references}  % requires file 'references.bib'
 
-\author{Michael Troger}
-\title{High Level Indoor Context Feature Extraction\\ Sensor data analyzation}
+\author{Peter A.\ Wiseguy}
+\title{IM520/MC505 Computer Vision\\ Term Report}
 \date{\today}
 
 %%%----------------------------------------------------------
 \begin{document}
-%\hypersetup{pageanchor=false}
 %%%----------------------------------------------------------
 \maketitle
 \tableofcontents
 %%%----------------------------------------------------------
 
-\include{still}
-\include{walking}
-\include{stairs}
-\include{escalators}
-\include{elevator}
-\include{door}
+\chapter*{Preface} % Vorwort
+
+This document is a simple template for a typical term or semester paper (lab/course report, 
+``Übungsbericht'' etc.) based on the \textsf{HagenbergThesis} \latex package.%
+\footnote{See \url{https://github.com/Digital-Media/HagenbergThesis} for the most current version.
+This repository also provides a good introduction and useful hints for authoring academic texts with LaTeX.}
+It is based on \latex's standard \texttt{report} document class with \texttt{chapter} as the top 
+structuring element.
+If you wish to write this report in German you should substitute the line
+\begin{quote}
+ \verb!\documentclass[a4paper,english,11pt]{report}! 
+\end{quote}
+at the top of this document by
+\begin{quote}
+ \verb!\documentclass[a4paper,ngerman,11pt]{report}!.
+\end{quote}
+Also, you may want to place the text of the individual chapters in separate files and 
+include them using \verb!\include{..}! 
+(see file \nolinkurl{_thesis_EN.tex}, for example).
+
+Simply omit this chapter (which could also be called ``Abstract'') if you do not want to provide this kind of summary.
 
 
 %%%----------------------------------------------------------
-%\MakeBibliography[nosplit]
+\chapter{Guidelines}
+%%%----------------------------------------------------------
+
+Here are a few guidelines for the reports expected to be turned in for this course.
+
+One chapter should be provided for each assignment.
+Describe the given task in your own words (do not replicate the assignment 1:1). 
+Then describe your approach, explain the main difficulties, clearly outline your solution, finally provide illustrative and meaningful results. 
+
+Use mathematical and algorithmic notation wherever appropriate (usually this is not done enough). Try to go beyond the material you find elsewhere and to use and extend formal descriptions in a creative way. Also, try to keep your notation simple and consistent, which is not always easy to do. Look at good examples and consider this part of the learning process. Do not, on the other hand, explain details that are common knowledge (such as, for example, Pythagoras' law). Get used to work with formal and concise descriptions and train yourself in ``getting the notation right''.
+Be creative when it comes to designing tests and selecting good examples.
+%
+\begin{center}
+\textbf{Don't just show your program code!} 
+\end{center}
+%
+By the way, all you ever need to know about algorithms can be 
+found in \cite{Sedgewick2011}.%
+\footnote{This should only produce a citation so the bibliography is not empty.} 
+
+
+%%%----------------------------------------------------------
+\chapter{Circle Detection}
+%%%----------------------------------------------------------
+
+Description of this task follows here.
+
+
+
+%%%----------------------------------------------------------     
+\chapter{Camera Calibration}
+%%%----------------------------------------------------------
+
+More chapters to follow.
+
+
+
+\chapter{Summary and Comments}
+
+This could be a good place to describe how you experienced this course, what you liked or didn't, and to provide suggestions for improvement.
+
+
+%%%----------------------------------------------------------
+\MakeBibliography[nosplit]
 %%%----------------------------------------------------------
 
 \end{document}
