Use butterknife for view injection

--- a/Thesis/_thesis_EN.tex
+++ b/Thesis/_thesis_EN.tex
@@ -51,31 +51,31 @@
 \maketitle
 \tableofcontents
 
-\include{thesis_EN/front/preface} 	% preface is optional
+%\include{thesis_EN/front/preface} 	% preface is optional
 \include{thesis_EN/front/abstract}
-\include{thesis_EN/front/kurzfassung}			
+%\include{thesis_EN/front/kurzfassung}			
 
 %%%----------------------------------------------------------
 \mainmatter          			% main part (arabic page numbers)
 %%%----------------------------------------------------------
 
 \include{thesis_EN/chapters/introduction}
-\include{thesis_EN/chapters/thethesis}
-\include{thesis_EN/chapters/latex}
-\include{thesis_EN/chapters/figures}
-\include{thesis_EN/chapters/mathematics}
-\include{thesis_EN/chapters/literature}
-\include{thesis_EN/chapters/printing}
-\include{thesis_EN/chapters/closing}
+%\include{thesis_EN/chapters/thethesis}
+%\include{thesis_EN/chapters/latex}
+%\include{thesis_EN/chapters/figures}
+%\include{thesis_EN/chapters/mathematics}
+%\include{thesis_EN/chapters/literature}
+%\include{thesis_EN/chapters/printing}
+%\include{thesis_EN/chapters/closing}
 
 %%%----------------------------------------------------------
-\appendix                                         % appendix 
+%\appendix                                         % appendix 
 %%%----------------------------------------------------------
 
-\include{thesis_EN/back/appendix_a}	% technical supplements
-\include{thesis_EN/back/appendix_b}	% contents of the CD-ROM/DVD
-\include{thesis_EN/back/appendix_c}	% chronological list of changes
-\include{thesis_EN/back/appendix_d}	% source text of this document
+%\include{thesis_EN/back/appendix_a}	% technical supplements
+%\include{thesis_EN/back/appendix_b}	% contents of the CD-ROM/DVD
+%\include{thesis_EN/back/appendix_c}	% chronological list of changes
+%\include{thesis_EN/back/appendix_d}	% source text of this document
 
 %%%----------------------------------------------------------
 \MakeBibliography                        				% references
